--- a/Swift/MacDemo/MacDemo/Base.lproj/Main.storyboard
+++ b/Swift/MacDemo/MacDemo/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="20037"/>
+        <plugIn identifier="com.apple.WebKit2IBPlugin" version="20037"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,7 +676,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="MacDemo" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -683,11 +686,26 @@
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
+                    <window key="window" title="TypeSwift Demo" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
+                        <rect key="contentRect" x="196" y="240" width="1045" height="780"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <value key="minSize" type="size" width="800" height="600"/>
+                        <toolbar key="toolbar" implicitIdentifier="493B26CC-062C-42DE-882C-90273A2F18E9" autosavesConfiguration="NO" displayMode="iconAndLabel" sizeMode="regular" id="ZXs-7M-lBM">
+                            <allowedToolbarItems>
+                                <toolbarItem implicitItemIdentifier="NSToolbarShowColorsItem" id="g9P-c6-jgm"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarShowFontsItem" id="KEU-t0-fTP"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarPrintItem" id="9RT-dA-c46"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="LNh-pC-By6"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="Hzd-ea-DGF"/>
+                            </allowedToolbarItems>
+                            <defaultToolbarItems>
+                                <toolbarItem reference="g9P-c6-jgm"/>
+                                <toolbarItem reference="KEU-t0-fTP"/>
+                                <toolbarItem reference="Hzd-ea-DGF"/>
+                                <toolbarItem reference="9RT-dA-c46"/>
+                            </defaultToolbarItems>
+                        </toolbar>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
                         </connections>
@@ -698,20 +716,60 @@
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="250"/>
+            <point key="canvasLocation" x="-1038" y="393"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="MacDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <containerView translatesAutoresizingMaskIntoConstraints="NO" id="cvy-hk-Cgd">
+                                <rect key="frame" x="425" y="0.0" width="375" height="600"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="Vih-mz-Wj6"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="FFM-Q5-gdR" kind="embed" id="wcg-nQ-oiy"/>
+                                </connections>
+                            </containerView>
+                            <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iDt-Zx-Uch">
+                                <rect key="frame" x="0.0" y="0.0" width="425" height="600"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="cvy-hk-Cgd" secondAttribute="trailing" id="Kuq-Aa-REm"/>
+                            <constraint firstItem="cvy-hk-Cgd" firstAttribute="leading" secondItem="iDt-Zx-Uch" secondAttribute="trailing" id="Lb5-zJ-XfZ"/>
+                            <constraint firstItem="cvy-hk-Cgd" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="QC6-CS-lAG"/>
+                            <constraint firstAttribute="bottom" secondItem="iDt-Zx-Uch" secondAttribute="bottom" id="Z2T-HG-H3d"/>
+                            <constraint firstItem="iDt-Zx-Uch" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="fI6-nJ-Pjq"/>
+                            <constraint firstAttribute="bottom" secondItem="cvy-hk-Cgd" secondAttribute="bottom" id="sJG-o2-oLa"/>
+                            <constraint firstItem="iDt-Zx-Uch" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="x5o-FE-oVb"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="74" y="393"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8XQ-ea-eTG">
+            <objects>
+                <viewController id="FFM-Q5-gdR" sceneMemberID="viewController">
+                    <view key="view" id="IsZ-Y7-OsY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="600"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </view>
+                </viewController>
+                <customObject id="dEQ-cO-XkW" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="845" y="393"/>
         </scene>
     </scenes>
 </document>
